k8/dtapi-be-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-be
  labels:
    app: dtapi
spec:
  ports:
    - port: 80
  selector:
    app: dtapi
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: dtapi-be
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dtapi
        tier: backend
    spec:
      containers:
      - image: eu.gcr.io/test1-286117/dtapi:latest
        name: dtapi
        ports:
        - containerPort: 80
          name: dtapi
