k8/dtapi-lb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-lb
  labels:
    app: dtapi
spec:
  ports:
    - port: 80
  selector:
    app: dtapi
    tier: nginx-lb
  type: LoadBalancer
  loadBalancerIP: 35.228.27.37
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtapi-lb
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: nginx-lb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dtapi
        tier: nginx-lb
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: false
      volumes:
        - name: config
          configMap:
            name: dtapi-nginx-config
            items:
            - key: nginx-conf
              path: "default.conf"
