k8/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtapi-mysql
  labels:
    app: dtapi
spec:
  ports:
    - port: 3306
  selector:
    app: dtapi
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: dtapi-mysql
  labels:
    app: dtapi
spec:
  selector:
    matchLabels:
      app: dtapi
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dtapi
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
          subPath: data
        # TODO
        - name: mysql-persistent-storage
          mountPath: docker-entrypoint-initdb.d
          subPath: init_scripts
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
